objects/CommandCenter__Release_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Build_Number__c</fullName>
        <label>Build Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Code_Deployed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Code Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Release__c</fullName>
        <label>Release</label>
        <referenceTo>CommandCenter__Release__c</referenceTo>
        <relationshipLabel>Release Trackers</relationshipLabel>
        <relationshipName>Release_Trackers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommandCenter__SFEnvironment__c</fullName>
        <label>SF Environment</label>
        <referenceTo>CommandCenter__SF_Environment__c</referenceTo>
        <relationshipLabel>release trackers</relationshipLabel>
        <relationshipName>release_trackers2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Validation_Completed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field indicate whether testing is completed or not</description>
        <inlineHelpText>This field indicate whether testing is completed or not</inlineHelpText>
        <label>Validation Completed</label>
        <type>Checkbox</type>
    </fields>
    <label>Release Tracker</label>
    <listViews>
        <fullName>CommandCenter__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CommandCenter__Cannot_complete_validation_without_code</fullName>
        <active>true</active>
        <description>Cannot complete validation without code deployment</description>
        <errorConditionFormula>If((CommandCenter__Validation_Completed__c == True) &amp;&amp; ( CommandCenter__Code_Deployed__c ==False),True,False)</errorConditionFormula>
        <errorMessage>You cannot mark validation completed to true unless code deployed is true</errorMessage>
    </validationRules>
</CustomObject>